small update to gf_bookmarks css z-index (to make sure its always on top of third-party web content).

--- a/web/src/gf_apps/gf_tagger/css/gf_bookmarks.css
+++ b/web/src/gf_apps/gf_tagger/css/gf_bookmarks.css
@@ -8,6 +8,11 @@ body {
 }
 
 
+#gf_page_picker {
+
+	/*important so that the GF UI is above all other page content*/
+	z-index: 10000;
+}
 
 #bookmarks {
 	position: absolute;
